# pyelf2rel

./: .gitignore  README.md  elf2lst.py  elf2rel.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
pyelf2rel/: __init__.py  align.py  elf2lst.py  elf2rel.py
src/pyelf2rel/: __init__.py  __main__.py  align.py  elf.py  elf2lst.py  elf2rel.py  error.py  lst.py  makelst.py  rel.py  util.py
tests/: __init__.py  test_elf2rel.py  test_integration.py  test_makelst.py
tests/resources/: README.md  spm-core-2fd38f5.elf  spm-core-2fd38f5.lst  spm-core-2fd38f5.rel  spm-core-2fd38f5_gen.lst  spm-core-2fd38f5_modern.rel  spm-practice-codes-3974b24.rel  spm-practice-codes-642167b.elf  spm-practice-codes-642167b_ttydt.rel  spm-practice-codes-9f3765a.elf  spm-practice-codes-9f3765a_old.rel  spm-practice-codes-b94a94a.elf  spm-practice-codes-b94a94a_me2r.rel
