[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyelf2rel"
dynamic = ["version"]
description = "Python tools for creating Nintendo REL files"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Seeky" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["pyelftools"]

[project.urls]
Documentation = "https://github.com/SeekyCt/pyelf2rel#readme"
Homepage = "https://github.com/SeekyCt/pyelf2rel"
Issues = "https://github.com/SeekyCt/pyelf2rel/issues"

[project.scripts]
elf2rel = 'pyelf2rel:elf2rel_main'
elf2lst = 'pyelf2rel:elf2lst_main'

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyelf2rel tests}"

[tool.coverage.run]
source_pkgs = ["pyelf2rel", "tests"]
branch = true
parallel = true
omit = [
  "src/pyelf2rel/__about__.py",
]

[tool.coverage.paths]
pyelf2rel = ["src/pyelf2rel", "*/pyelf2rel/src/pyelf2rel"]
tests = ["tests", "*/pyelf2rel/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
